pushing design changes to repo...

--- a/test.html
+++ b/test.html
@@ -879,6 +879,230 @@
                         <p>Since I am familiar with Rails and MVC I also decided to learn Laravel MVC in my free time.  Here is a recent example of what I can do while working with this technology in combination with styling.  Currently, I have a live version of this site at: <a href="https://trailblazersfans.com" target="_blank">https://trailblazersfans.com</a>.  The site is definitely a demo, and work still remains to be done.  It has been a fun and rewarding experience learning Laravel because I have found I am able to learn MVC frameworks fairly easily and am excited to learn many more during my career or as my personal time allows!</p></div>
                 </div>
 
+
+
+
+
+
+
+                <div class="col-sm-12 mt-5 col-md-6">
+
+                    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
+
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-home.png" itemprop="contentUrl" data-size="995x2979">
+                                <img src="images/triad-behavioral-health-main.png" itemprop="thumbnail" alt="Bootstrap 4 Custom Triad Behavioral Health theme" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> Triad Behavioral Health home page</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-custom-dropdown-example.png" itemprop="contentUrl" data-size="937x544">
+                                <img src="images/triad-behavioral-health-custom-dropdown-example.png" itemprop="thumbnail" alt="Bootstrap 4 Custom Triad Behavioral Health theme" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Custom dropdown upper navigation menu example</figcaption>
+                        </figure>
+
+
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-who_we_are.png" itemprop="contentUrl" data-size="995x2805">
+                                <img src="images/triad-behavioral-health-who_we_are.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Who We Are page</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-our_story.png" itemprop="contentUrl" data-size="995x3493">
+                                <img src="images/triad-behavioral-health-our_story.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Our Story page</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-our_experts.png" itemprop="contentUrl" data-size="995x16640">
+                                <img src="images/triad-behavioral-health-our_experts.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Our Experts page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-our_leadership.png" itemprop="contentUrl" data-size="995x4428">
+                                <img src="images/triad-behavioral-health-our_leadership.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Our Leadership page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-our_brands.png" itemprop="contentUrl" data-size="995x3240">
+                                <img src="images/triad-behavioral-health-our_brands.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Our Brands page</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-research_institute.png" itemprop="contentUrl" data-size="995x2993">
+                                <img src="images/triad-behavioral-health-research_institute.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site <br/>TBH Research Institute page</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-why_partner_with_triad.png" itemprop="contentUrl" data-size="995x1538">
+                                <img src="images/triad-behavioral-health-why_partner_with_triad.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH "Why Partner with Triad?" page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-educational_partnerships.png" itemprop="contentUrl" data-size="995x4641">
+                                <img src="images/triad-behavioral-health-educational_partnerships.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Educational Partnership contact page with reCAPTCHA </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-organizational_partnerships.png" itemprop="contentUrl" data-size="995x4827">
+                                <img src="images/triad-behavioral-health-organizational_partnerships.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Organizational Partnership contact page with reCAPTCHA </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-valued_partners.png" itemprop="contentUrl" data-size="995x1319">
+                                <img src="images/triad-behavioral-health-valued_partners.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Valued Partners/testimonials preview page</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-testimonials.png" itemprop="contentUrl" data-size="995x2297">
+                                <img src="images/triad-behavioral-health-testimonials.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Testimonials page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-contact.png" itemprop="contentUrl" data-size="995x1494">
+                                <img src="images/triad-behavioral-health-contact.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Contact page with reCAPTCHA </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/triad-behavioral-health-sitemap.png" itemprop="contentUrl" data-size="995x1734">
+                                <img src="images/triad-behavioral-health-sitemap.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Custom Bootstrap 4 Theme/Laravel Site<br/> TBH Sitemap page </figcaption>
+                        </figure>
+
+                    </div>
+
+                    <h6 class="trebuchet">Custom Bootstrap 4 Theme/Laravel Site<br/>TriadBehavioralHealth.com</h6>
+                    <a href="#demo11" class="btn btn-dark" data-toggle="collapse">More Info</a>
+                    <div id="demo11" class="collapse calibri">
+                        <br/>
+                        <p>This was the first project I completed at Triad Behavioral Health.  It is a custom Bootstrap 4 theme that is based off of mockups provided to me by the company's graphic designers.  The site is fully responsive and I am quite proud of how it turned out.  It is practically a pixel perfect representation of the design mockups I was given.  I learned a lot about Bootstrap 4 in the process of creating this site, and particularly how to stack elements in my desired orders at different screen sizes.  This site can be viewed at: <br/><a href="https://www.triadbehavioralhealth.com" target="_blank">https://www.triadbehavioralhealth.com</a></p></div>
+                </div>
+
+
+
+                <div class="col-sm-12 mt-5 col-md-6">
+
+                    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/playlist-admin-crud-hub.png" itemprop="contentUrl" data-size="2482x1646">
+                                <img src="images/tbh-audio-main.png" itemprop="thumbnail" alt="TBH/TLS Audio Admin Interface" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH playlist admin CRUD</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/add-track.png" itemprop="contentUrl" data-size="2482x1674">
+                                <img src="images/add-track.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Create/Upload Track to S3 page</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/add-license.png" itemprop="contentUrl" data-size="2482x1646">
+                                <img src="images/add-license.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Create Audio License page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/add-playlist-by-license.png" itemprop="contentUrl" data-size="2482x1646">
+                                <img src="images/add-playlist-by-license.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Create Playlist (name) w/ Associated License (one-to-many- - one license has many playlists) page </figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/edit-track.png" itemprop="contentUrl" data-size="2482x1846">
+                                <img src="images/edit-track.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Edit/Preview/Replace/Upload Audio Track to S3 page</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/tracks-preview-index-page.png" itemprop="contentUrl" data-size="2482x4034">
+                                <img src="images/tracks-preview-index-page.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Index/Preview All Uploaded Audio Tracks page</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/playlist-edit-add-tracks.png" itemprop="contentUrl" data-size="2482x3028">
+                                <img src="images/playlist-edit-add-tracks.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Edit/Preview/Replace/Playlist Tracks page</figcaption>
+                        </figure>
+
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/custom-error-messages-on-delete.png" itemprop="contentUrl" data-size="2482x1646">
+                                <img src="images/custom-error-messages-on-delete.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Custom Delete Alert Confirmation message box. "Danger Will Robinson!" :) </figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/public-playlist-custom-audio-player.png" itemprop="contentUrl" data-size="2482x1906">
+                                <img src="images/public-playlist-custom-audio-player.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Laravel Audio Admin AWS S3 Interface<br/> TBH Audio Custom Audio Player of Playlist Public Facing Bootstrap 4/Responsive </figcaption>
+                        </figure>
+
+
+
+                    </div>
+                    <h6 class="trebuchet">Laravel Audio Admin AWS S3 Interface<br/> One-to-Many (one license can have many playlists).<br/> Many-to-Many (many playlists can have many audio tracks)</h6>
+                    <a href="#demo12" class="btn btn-dark" data-toggle="collapse">More Info</a>
+                    <div id="demo12" class="collapse calibri">
+                        <br/>
+                        <p>With this work project I learned quite a bit about how to get more complex database relationships to work with Laravel/Eloquent ORM.  This required the use of a many-to-many relationship to store information about the track and the playlist associated with it.  It also required a one-to-many relationship so that one license could have many playlists associated with it.  This admin interface was replacing a third-party paid service that the company had used for years to store audio files for instructional recordings.  This admin interface is useful because it also stores the audio files on AWS S3, and behaves as a true CRUD app both in the database and on the S3 side when Creating, Reading, Updating, or Deleting (cascade deletion of related parent/child records, and files- - depending on what is deleted) Tracks. In my capacity as a developer, I was 'full-stack' in the truest sense.  I created the database structure, coded the back-end, and front-end from scratch.  This project was completed in February 2019.</p></div>
+                </div>
+
+
+
+
             </div>
             <!-- Root element of PhotoSwipe. Must have class pswp. -->
             <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
@@ -1004,6 +1228,22 @@
 
     </div>
 </div>
+<br/>
+<footer class="footer">
+
+<div class="container text-center trebuchet">
+    <i class="fas fa-code text-muted"></i>
+    thisdudecodes.com
+    <br/>
+
+    <span id="copyright">
+        &copy;
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+
+</div>
+
+</footer>
 
 <style scoped>
     @import "css/photoswipe.css";
